# git-remote-s3

./: .coverage  .flake8  .gitignore  Config  README.md  THIRD_PARTY_NOTICE.md  coverage.report  pyproject.toml
.github/workflows/: publish-test.yml  python-pytest.yml
git_remote_s3/: __init__.py  common.py  git.py  lfs.py  manage.py  remote.py
git_remote_s3_python/: __init__.py  common.py  git.py  main.py  remote.py
test/: parse_url_test.py  remote_test.py
